--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "husky": "^8.0.3",
