--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.34.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.4",
     "mongoose-slug-generator": "^1.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
